# netbox-permissions-plugin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
netbox_permissions_plugin/: __init__.py  filtersets.py  forms.py  navigation.py  settings.py  tables.py  template_content.py  urls.py
netbox_permissions_plugin/api/: __init__.py  serializers.py  urls.py  views.py
netbox_permissions_plugin/introspection/: __init__.py  actions.py  fields.py  types.py
netbox_permissions_plugin/migrations/: 0001_initial.py  0002_alter_constraintsnippet_body.py
netbox_permissions_plugin/models/: __init__.py  audit.py  snippet.py
netbox_permissions_plugin/resolver/: __init__.py  _q.py  effective.py  membership.py  reverse.py  tester.py  types.py
netbox_permissions_plugin/templates/netbox_permissions_plugin/: _base.html  _object_tab.html  constraintsnippet.html  effective.html  object_permissions_tab.html  permissionauditevent.html  reverse.html  tester.html
netbox_permissions_plugin/tests/: conftest.py  test_effective.py  test_introspect_actions.py  test_introspect_fields.py  test_membership.py  test_models.py  test_q_builder.py  test_reverse.py  test_tester.py
netbox_permissions_plugin/views/: audit.py  effective.py  object_tab.py  reverse_lookup.py  snippet.py  tester.py
