[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-permissions-plugin"
version = "0.1.0"
description = "NetBox plugin for auditing effective permissions and (later) building ObjectPermission rules visually."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Alexander", email = "ihumster@ihumster.ru" },
]
keywords = ["netbox", "permissions", "rbac", "audit"]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# No runtime dependencies: Django and NetBox are provided by the target environment.
dependencies = []

[project.optional-dependencies]
# Test and lint dependencies. Installed via `uv sync --extra dev` or `uv pip install -e ".[dev]"`.
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "ruff==0.6.9",
]

[project.urls]
Homepage = "https://example.invalid/netbox-permissions-plugin"
Issues = "https://example.invalid/netbox-permissions-plugin/issues"

# Hatchling: explicitly declare what goes into the wheel.
[tool.hatch.build.targets.wheel]
packages = ["netbox_permissions_plugin"]

[tool.hatch.build.targets.sdist]
include = [
    "/netbox_permissions_plugin",
    "/README.md",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

# uv-specific settings. Not strictly required but pin behavior explicitly.
[tool.uv]
# Cache project venv in .venv so CI and local builds align.
package = true
# Minimum uv version. Not critical, but guards against old uv behaviors.
required-version = ">=0.4.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "netbox.settings"
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "C4",  # comprehensions
    "DJ",  # django-specific
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length (formatter handles wrapping)
    "B008",  # default arg call — common pattern in DRF/Django
]

[tool.ruff.lint.per-file-ignores]
"netbox_permissions_plugin/tests/*" = ["F401", "F811"]  # pytest fixtures

[tool.ruff.lint.isort]
# Treat our package as first-party so it goes into its own import group.
known-first-party = ["netbox_permissions_plugin"]
# NetBox / Django ship as third-party in the target environment. Listing them
# explicitly keeps isort from drifting them into the wrong group.
known-third-party = [
    "django",
    "netbox",
    "utilities",
    "users",
    "core",
    "dcim",
    "ipam",
    "extras",
    "tenancy",
    "virtualization",
    "circuits",
]

[tool.ruff.format]
quote-style = "double"
